--- a/data/blog/guide-to-vim.mdx
+++ b/data/blog/guide-to-vim.mdx
@@ -2,7 +2,7 @@
 title: 'Vim Guide'
 date: '2021-11-20'
 lastmod: '2021-11-20'
-tags: ['vim' 'guide']
+tags: ['vim', 'guide']
 draft: false
 summary: 'Vim使用手册'
 authors: ['default']
