--- a/data/blog/guide-to-vim.mdx
+++ b/data/blog/guide-to-vim.mdx
@@ -11,17 +11,20 @@ layout: PostSimple
 
 # 简介
 
-vim是一个向上兼容vi的文本编辑器，可用于编辑各种纯文本，在服务器上编辑文件时特别有用。
+<TOCInline toc={props.toc} asDisclosure />
+
+vim 是一个向上兼容 vi 的文本编辑器，可用于编辑各种纯文本，在服务器上编辑文件时特别有用。
 
 ## 模式类型
 
 - `命令模式` - 敲击键盘动作会被识别为命令，常用命令：`i`切换到编辑模式，`x`删除当前光标所在出字符，`:`切换到底线命令模式。
-- `编辑模式` - 字符按键以及shift组合用以输入字符，常用输入：`0`移动光标到行首，`$`移动光标到行尾，`ESC`退出编辑模式进入命令模式。
+- `编辑模式` - 字符按键以及 shift 组合用以输入字符，常用输入：`0`移动光标到行首，`$`移动光标到行尾，`ESC`退出编辑模式进入命令模式。
 - `底线命令模式` - 底线命令模式可以输入单个或多个字符的命令，用于文件保存等操作。
 
 ## 模式转换
 
 **命令模式 -> 编辑模式**
+
 - `i` - 在光标所在处输入
 - `a` - 在光标在处后方输入
 - `o` - 在光标所在处的下方打开一个新行
@@ -30,21 +33,26 @@ vim是一个向上兼容vi的文本编辑器，可用于编辑各种纯文本，
 - `O` - 在光标所在处的上方打开一个新行
 
 **命令模式 -> 底线命令模式**
+
 - `:`
 
 **编辑模式 -> 命令模式**
+
 - `ESC`
 
 **底线命令模式 -> 命令模式**
+
 - `ESC`
 
 ## 关闭文件
 
 **命令模式**
+
 - `ZZ` - 保存并退出
 - `ZQ` - 不保存直接退出
 
 **底线命令模式**
+
 - `q` - 退出
 - `q!` - 强制退出，不保存此前的编辑操作
 - `w` - 保存
@@ -136,7 +144,7 @@ vim是一个向上兼容vi的文本编辑器，可用于编辑各种纯文本，
 
 ## 地址定界
 
-- `:#` 特定的第#行，例如5即第5行
+- `:#` 特定的第#行，例如 5 即第 5 行
 
 ## 查找
 
@@ -148,4 +156,4 @@ vim是一个向上兼容vi的文本编辑器，可用于编辑各种纯文本，
 ## 查找并替换
 
 - `s/要查找的内容/替换为的内容/修饰符` - 要查找的内容：可使用正则表达式；替换为的内容：不能使用正则表达式，但可以引用；如果`要查找的内容`部分在模式中使用分组符号：在“替换为的内容”中使用后向引用；直接引用查找模式匹配到的全部文本，要使用&符号；
-修饰符：`i`：忽略大小写；`g`：全局替换，意味着一行中如果匹配到多次，则均替换；示例：%s@\<t\([[:alpha:]]\+\)\>@T\1@g    %s@\<t[[:alpha:]]\+\>@&er@g
+  修饰符：`i`：忽略大小写；`g`：全局替换，意味着一行中如果匹配到多次，则均替换；示例：%s@\<t\([[:alpha:]]\+\)\>@T\1@g %s@\<t[[:alpha:]]\+\>@&er@g
