--- a/data/blog/guide-to-vim.mdx
+++ b/data/blog/guide-to-vim.mdx
@@ -11,7 +11,7 @@ layout: PostSimple
 
 # 简介
 
-<TOCInline toc={props.toc} asDisclosure />
+<TOCInline toc={props.toc} exclude="Overview" toHeading={2} />
 
 vim 是一个向上兼容 vi 的文本编辑器，可用于编辑各种纯文本，在服务器上编辑文件时特别有用。
 
