--- a/data/blog/guide-to-vim.mdx
+++ b/data/blog/guide-to-vim.mdx
@@ -13,7 +13,7 @@ layout: PostSimple
 
 <TOCInline toc={props.toc} exclude="简介" toHeading={2} />
 
-[vim](https://www.vim.org/) 是一个向上兼容 vi 的文本编辑器，可用于编辑各种纯文本，在服务器上编辑文件时特别有用。^[史上最全 VIM 使用手册](https://zhuanlan.zhihu.com/p/100652584)
+[vim](https://www.vim.org/) 是一个向上兼容 vi 的文本编辑器，可用于编辑各种纯文本，在服务器上编辑文件时特别有用。^[[史上最全 VIM 使用手册](https://zhuanlan.zhihu.com/p/100652584)]
 
 ## 模式类型
 
