--- a/data/blog/remember/remember-images.mdx
+++ b/data/blog/remember/remember-images.mdx
@@ -1,12 +1,13 @@
 ---
 title: '值得铭记的照片墙'
-date: '2020-11-21'
+date: '2021-11-21'
+lastmod: '2021-11-21'
 tags: ['照片墙', '铭记']
 draft: false
-summary: '记录每一个动人时刻'
+summary: '记录每一个打动我的时刻'
 authors: ['default']
 ---
 
-# 西南联大
-
-![联大](/static/images/southWest-united-university-logo.png)^[“中国最传奇大学”西南联大纪录电影《九零后》]
+**西南联大**
+![联大](/static/images/southWest-united-university-logo.png)
+来源: [“中国最传奇大学”西南联大纪录电影《九零后》](https://app.dianyingjie.com/?app=article&controller=article&action=show&contentid=245381)
