--- a/data/blog/economic/8-financial-crisis-01.mdx
+++ b/data/blog/economic/8-financial-crisis-01.mdx
@@ -12,7 +12,7 @@ layout: PostSimple
 # 概述
 
 我们在 2001 年中国加入 WTO 以来近 10 年的国际交流中不断深化对资本全球化的认识，提出了新世纪第二个 10 年中国不得不面对的三个无解难题。
-而大家近两年的讨论还可以归纳为 **"一个趋势，两种保守，三大战略"**。^[[八次危机：中国的真实经验](https://baike.baidu.com/item/八次危机：中国的真实经验/16371151)]
+而大家近两年的讨论还可以归纳为`一个趋势，两种保守，三大战略`。^[[八次危机：中国的真实经验](https://baike.baidu.com/item/八次危机：中国的真实经验/16371151)]
 
 - `一个趋势`- 全球化进程中的"法西斯化"趋势
 - `两种保守` - 表面对立的激进自由派和垄断经济在实质上殊途同归属于保守主义"拉倒车" —— 回归已经被经验证明失败的 19 世纪西方政治和东方财阀经济
