--- a/data/blog/tool/guide-to-vim.mdx
+++ b/data/blog/tool/guide-to-vim.mdx
@@ -11,14 +11,14 @@ layout: PostSimple
 
 # 简介
 
-<TOCInline toc={props.toc} exclude="简介" toHeading={2} />
+<TOCInline toc={props.toc} exclude="简介" toHeading={2}/>
 
 [vim](https://www.vim.org/) 是一个向上兼容 vi 的文本编辑器，可用于编辑各种纯文本，在服务器上编辑文件时特别有用。^[[史上最全 VIM 使用手册](https://zhuanlan.zhihu.com/p/100652584)]
 
 ## 模式类型
 
-- `命令模式` - 敲击键盘动作会被识别为命令，常用命令：`i`切换到编辑模式，`x`删除当前光标所在出字符，`:`切换到底线命令模式。
-- `编辑模式` - 字符按键以及 shift 组合用以输入字符，常用输入：`0`移动光标到行首，`$`移动光标到行尾，`ESC`退出编辑模式进入命令模式。
+- `命令模式` - 敲击键盘动作会被识别为命令。
+- `编辑模式` - 字符按键以及 shift 组合用以输入字符。
 - `底线命令模式` - 底线命令模式可以输入单个或多个字符的命令，用于文件保存等操作。
 
 ## 模式转换
@@ -70,7 +70,7 @@ layout: PostSimple
 
 ### 行间跳转
 
-- `G` - 跳转至由#指定的行
+- `#G` - 跳转至由#指定的行
 - `1G/gg` - 第一行
 - `G` - 最后一行
 
@@ -155,5 +155,9 @@ layout: PostSimple
 
 ## 查找并替换
 
-- `s/要查找的内容/替换为的内容/修饰符` - 要查找的内容：可使用正则表达式；替换为的内容：不能使用正则表达式，但可以引用；如果`要查找的内容`部分在模式中使用分组符号：在“替换为的内容”中使用后向引用；直接引用查找模式匹配到的全部文本，要使用&符号；
-  修饰符：`i`：忽略大小写；`g`：全局替换，意味着一行中如果匹配到多次，则均替换；示例：%s@\<t\([[:alpha:]]\+\)\>@T\1@g %s@\<t[[:alpha:]]\+\>@&er@g
+- `s/要查找的内容/替换为的内容/修饰符` - 示例：%s@\<t\([[:alpha:]]\+\)\>@T\1@g %s@\<t[[:alpha:]]\+\>@&er@g
+    - `要查找的内容` - 可使用正则表达式
+    - `替换为的内容` - 不能使用正则表达式，但可以引用，如果`要查找的内容`部分在模式中使用分组符号，在`替换为的内容`中使用后向引用，直接引用查找模式匹配到的全部文本，要使用&符号
+    - `修饰符`
+        - `i`：忽略大小写；
+        - `g`：全局替换，意味着一行中如果匹配到多次，则均替换
