more good habit

--- a/data/blog/think/good-habit.mdx
+++ b/data/blog/think/good-habit.mdx
@@ -9,4 +9,7 @@ authors: ['default']
 layout: PostLayout
 ---
 
-- 22:30 之前睡觉，早起学习或锻炼身体，把重心放到工作中，多去调整工作姿势/切换状态，达到一个高效的工作效果，不断设定目标，达成目标
+1. 22:30 之前睡觉，早起学习或锻炼身体，把重心放到工作中，多去调整工作姿势/切换状态，达到一个高效的工作效果，不断设定目标，达成目标。
+2. 不要顾左右担东西，要做到心无杂念，一心做事，制定计划，达成目标，方有所成。只是空想，做事散漫，顾左右而言他，只会浪费时间，一无所获。
+3. 工作中保持良好的人际关系，可以保持独立，可以不恭维，这挺好，除此之外，也需要放下身段，平常心沟通，与人为善，多交朋友，善待自己和他人。
+4. 没事时多联系联系好友，保持好奇心同理心，多建立一些有益，多一些善意，多一点感恩，多一份赤忱。
