fix some error word

--- a/data/blog/think/obstinate.mdx
+++ b/data/blog/think/obstinate.mdx
@@ -2,7 +2,7 @@
 title: '倔强'
 date: '2021-11-26'
 lastmod: '2021-11-26'
-tags: ['绝枪', '五月天']
+tags: ['五月天']
 draft: false
 summary: '就这一次 我和我的倔强'
 authors: ['default']
