--- a/data/blog/tool/guide-to-anaconda.mdx
+++ b/data/blog/tool/guide-to-anaconda.mdx
@@ -13,7 +13,7 @@ layout: PostSimple
 
 <TOCInline toc={props.toc} exclude="简介" toHeading={2}/>
 
-[anaconda](https://www.anaconda.com/)Anaconda 是一个用于科学计算的[Python](https://www.python.org/)发行版，支持Linux, Mac, Windows,
+[Anaconda](https://www.anaconda.com/)是一个用于科学计算的[Python](https://www.python.org/)发行版，支持Linux, Mac, Windows,
 包含了众多流行的科学计算、数据分析的Python包。安装了Anaconda，你就拥有了任意版本的python和各种包了。 使用Anaconda，在同一个系统上维护不同的项目环境也很方便。
 
 ## 常用命令
