年前的最后一天

--- a/data/blog/diary/summary-of-something-2.mdx
+++ b/data/blog/diary/summary-of-something-2.mdx
@@ -34,3 +34,5 @@ layout: PostLayout
 所以，听到他人说的，如果有用默默的记在心里，然后忘记它，做手头上的事，微笑面对现实，主动解决问题，让今天过的更好。
 
 至于那些可能有用的问题，之后再找时间去思考，回答它，即可！写日记也是一种思考和回答的方式，今天它奏效了。
+
+成年人，犯点错没什么，耽误点时间，但我总希望，我们能走的更好，能够养成好的习惯，能够开心快乐的生活，能够给周围人，特别是媳妇儿和亲人关心和爱护~新年快乐，共勉~
