工作沟通思想梳理

--- a/data/blog/diary/summary-of-something-5.mdx
+++ b/data/blog/diary/summary-of-something-5.mdx
@@ -26,6 +26,8 @@ layout: PostLayout
 
 出于本性，人会把爱放在首位，把对家人的爱放在其他所有的前面，对于其他事情则是把自己的利益放在所有其他人的利益之前，爱 > 友谊 > 利益，如何把握好爱和利益，是人性和理性的冲突，单纯的爱喝让人动容，复杂的利益让人倾心，This's all up to you.
 
+一个从战场上回来的军官说，在战场上，我不会去想上一分钟，未来的一分钟对我来说也不重要，重要的是当下这一分钟，我怎么击溃我的敌人，我只关心这一分钟，因为下一分钟，我在不在世都不知道了，所以我只活在当下。`生活是活出来的，不是想出来的，需要顶层设计，但实践中才能出真知。`
+
 聪明人善于算计，算计局势，算计不同人的利益点，算计付出和获得，算计当下和长远，懂得隐忍，但在爱面前却犯了糊涂，没有绝对的好坏，只有适合你才是最好的。
 
 `无论事情的现象有多么复杂，按每一条线梳理完之后，结果一定是简单明了的`，所有的东西也是一样，我们需要的是耐下心来，一步步的取梳理，规整，共情，然后就可以做好它
