--- a/data/blog/diary/summary-of-something-6.mdx
+++ b/data/blog/diary/summary-of-something-6.mdx
@@ -1,7 +1,7 @@
 ---
 title: '工作沟通思想梳理'
-date: '2022-01-12'
-lastmod: '2022-01-12'
+date: '2022-01-14'
+lastmod: '2022-01-14'
 tags: ['日记']
 draft: false
 summary: ''
@@ -9,10 +9,21 @@ authors: ['default']
 layout: PostLayout
 ---
 
-及时总结~
+### 及时总结
 
 今天的沟通又有了成长，能够一步步的解答对方的疑惑，清晰明了的表达自己所期盼的事情的模样，遇到疑问，不慌张不逃避，理解对方的问题后，思考并给出更多关于事情的细节描述，多次沟通之后，一定会得到一个双方都满意的结果。
 
 耐心的善意的诚恳的沟通，勇敢的做下去，勇敢的活下去。
 
 下一步应该是沟通讨论出一个可行的实施方案，梳理完目标之后，大家依然会朝着同一个的目标去努力，水到渠成。
+
+### 周末总结
+
+计划永远赶不上变化，想的很美好，做起来却完全不是那么回事，但只有不断行动，不断克服困难，总结反思问题，才能不断趋近最终的那么目标。
+
+人和人之间的关系是需要不断培养的，友情也好，亲情也有，爱情也好，都需要不断浇水，不断耕耘，才可能会有收获的季节。而强目的性，强功利性，会导致拔苗助长的负面效果，掌握尺度很考验对人性的把握能力。
+
+短时强刺激会给人带来愉快的体验，也会达到暂时放松神经的效果，但杯水永远是无法解渴的，只有建立长期目标，努力坚持，克服种种困难，才能获得真正有价值的东西，而不是表面上的一点点利益。玩游戏，看节目，听音乐，能达到短期的目的。读书，听课，做作业，写总结，能达到长期的目的。
+短时刺激和长期刺激，需要搭配着使用，任何极端的刺激方式都会产生不可逆的负面反应，毕竟工作学习只是生活的一部分，贪图享乐也是生活的一部分，亲情友情爱情也是生活的一部分，哪一部分缺少了都会产生副作用，所有的部分都不可能完美，有机组合则考验运筹帷幄的能力。
+
+
