--- a/data/blog/guide-book/guide-to-sql.mdx
+++ b/data/blog/guide-book/guide-to-sql.mdx
@@ -4,7 +4,7 @@ date: '2022-03-08'
 lastmod: '2022-03-08'
 tags: ['SQL', '使用手册']
 draft: false
-summary: 'Anaconda是一个用于科学计算的Python发行版，支持Linux, Mac, Windows, 包含了众多流行的科学计算、数据分析的Python包。安装了Anaconda，你就拥有了任意版本的python和各种包了。使用Anaconda，在同一个系统上维护不同的项目环境也很方便。'
+summary: 'SQL使用手册'
 authors: ['default']
 layout: PostSimple
 ---
