梳理2022年度目标，进一步整理出10月份目标

--- a/data/blog/goal/draft/draft-goals.mdx
+++ b/data/blog/goal/draft/draft-goals.mdx
@@ -1,25 +1,29 @@
 ---
-title: '目标'
-date: '2022-09-25'
-lastmod: '2022-09-25'
-tags: ['目标']
+title: '目标-草稿箱'
+date: '2022-09-26'
+lastmod: '2022-09-26'
+tags: ['目标', '草稿箱']
 draft: false
-summary: ''
+summary: '找出你能做的事情，再从中挑出想做的事情，再从中挑选出真心想做的事情，最后从中挑选出真心特别特别特别想做的事情作为目标。'
 authors: ['default']
 layout: PostLayout
 ---
 
-## 设置目标的几点建议
+## 关于设置目标的几点建议
 
-1. 把目标写下来，这是一种对自己的承诺；
-2. 给出一个截止日期，让目标有效地实现；
-3. 细化目标，变成一个具体可实现的目标；
-4. 设定目标的目的并不是最终实现目标，而是目标可以使我们自由，给我们动力，让我们更快乐和幸福，最重要的是实现目标的过程。
-5. 实现目标之后，要接着设置新的目标，否则会失去前进的动力。
+1. 把目标写下来，建立一个对自己的承诺；
+2. 给出截止日期，让目标能够有效地实现；
+3. 细化目标内容，让目标具体可行可落地；
+4. 设定目标的终极意义不是实现目标，目标的终极意义是让我们自由，给我们动力，让我们更快乐，更专注，目标的终极意义是实现目标的过程。
+5. 实现目标之后，接着设置新的目标，否则会失去前进的动力。
 
 ## 设定一个目标
 
-### 找出你能做的事情
+找出你能做的事情，再从中挑出想做的事情，再从中挑选出真心想做的事情，最后从中挑选出真心特别特别特别想做的事情作为目标。
+
+### 草稿箱
+
+#### 运动类
 
 - 篮球（运球、投篮、上篮）
 - 羽毛球
@@ -42,6 +46,8 @@ layout: PostLayout
 - 射箭
 - 打枪
 
+#### 生活类
+
 - 读书（社科类的小说、思想类书籍、道德经）
 - 学英文（读英文书、背单词、听英文节目、看电影、口语练习）
 - 演讲（写演讲稿、朗诵诗歌、演讲、说脱口秀）
@@ -54,11 +60,13 @@ layout: PostLayout
 - 唱歌
 - 跳舞
 - 冥想
-- 讲课
-- 上课（物理课、数学课）
--
+- 给别人上课
+- 听课学知识（物理课、数学课）
 
-- 深度学习项目（矩阵计算、微积分、模型训练、调参）
+#### 工作类
+
+- 机器学习项目（各类机器学习算法、kaggle比赛实践）
+- 深度学习项目（矩阵计算、微积分、模型训练、调参、大模型、迁移学习、图模型）
 - SQL 项目（图数据库、文档数据库、序列数据库、关系型数据库）
 - Web 项目（搭建网站）
 - 编程语言（Java、python、Golang、Scala）
@@ -67,4 +75,4 @@ layout: PostLayout
 - 风控模型（开源数据、数据预处理、模型训练、模型效果检验）
 - 系统工具（提高工作效率）
 - 编程项目（写一个小游戏、写一个小软件）
--
+
