--- a/data/blog/goal/2022/annual-goals-2022.mdx
+++ b/data/blog/goal/2022/annual-goals-2022.mdx
@@ -1,10 +1,10 @@
 ---
-title: '目标'
-date: '2022-09-25'
-lastmod: '2022-09-25'
-tags: ['目标']
-draft: true
-summary: ''
+title: '2022-年度-目标'
+date: '2022-09-26'
+lastmod: '2022-09-26'
+tags: ['2022', '年度目标', '目标']
+draft: false
+summary: '找出你能做的事情，再从中挑出想做的事情，再从中挑选出真心想做的事情，最后从中挑选出真心特别特别特别想做的事情作为目标。'
 authors: ['default']
 layout: PostLayout
 ---
@@ -17,48 +17,24 @@ layout: PostLayout
 4. 设定目标的目的并不是最终实现目标，而是目标可以使我们自由，给我们动力，让我们更快乐和幸福，最重要的是实现目标的过程。
 5. 实现目标之后，要接着设置新的目标，否则会失去前进的动力。
 
-## 设定一个目标
+## 2022年度目标
 
-### 找出你能做的事情
+### 想做的事情
 
-- 篮球（运球、投篮、上篮）
-- 羽毛球
-- 拳击
-- 网球
-- 乒乓球
-- 游泳（仰泳、蝶泳、翻滚、跳水）
-- 健身（胸、胳膊、背、腹肌、核心、俯卧撑、引体向上）
-- 冲浪
-- 跳绳
-- 钓鱼
-- 壁球
-- 跳伞
-- 桌球
-- 潜水
-- 打麻将
+- 游泳（仰泳、蝶泳、翻滚转身）
 - 玩游戏（塞尔达）
-- 爬野山（徒步）
 - 自驾旅行
-- 射箭
-- 打枪
-
-- 读书（社科类的小说、思想类书籍、道德经）
+- 读书（社科类的小说、思想类书籍）
 - 学英文（读英文书、背单词、听英文节目、看电影、口语练习）
-- 演讲（写演讲稿、朗诵诗歌、演讲、说脱口秀）
-- 积木（买乐高、搭建模型）
 - 积极心理学（课程学习、积极实践）
 - 弹钢琴
 - 练字
 - 练车（停车入库、走快速路、走高速、高峰跟车、并线）
 - 买菜做饭（红烧一切）
-- 唱歌
-- 跳舞
 - 冥想
-- 讲课
-- 上课（物理课、数学课）
--
-
-- 深度学习项目（矩阵计算、微积分、模型训练、调参）
+- 听课学知识（物理课、数学课）
+- 机器学习项目（各类机器学习算法、kaggle比赛实践）
+- 深度学习项目（矩阵计算、微积分、模型训练、调参、大模型、迁移学习、图模型、自然语言处理）
 - SQL 项目（图数据库、文档数据库、序列数据库、关系型数据库）
 - Web 项目（搭建网站）
 - 编程语言（Java、python、Golang、Scala）
@@ -67,4 +43,20 @@ layout: PostLayout
 - 风控模型（开源数据、数据预处理、模型训练、模型效果检验）
 - 系统工具（提高工作效率）
 - 编程项目（写一个小游戏、写一个小软件）
--
+
+### 真心想做的事情
+
+- 游泳（仰泳、蝶泳、翻滚转身）
+- 学英文（读英文书）
+- 积极心理学（课程学习、积极实践）
+- 练车（停车入库、走快速路、走高速、高峰跟车、并线）
+- 听课学知识（物理课、数学课）
+- 机器学习项目（各类机器学习算法、kaggle比赛实践）
+
+### 真心特别特别特别想做的事情作为目标
+
+- 游泳（仰泳、蝶泳、翻滚转身）
+- 学英文（读英文书）
+- 积极心理学（课程学习、积极实践）
+- 机器学习项目（各类机器学习算法、kaggle比赛实践）
+
