梳理2022年度目标，进一步整理出10月份目标

--- a/data/blog/goal/2022/monthly-goals-2022-10.mdx
+++ b/data/blog/goal/2022/monthly-goals-2022-10.mdx
@@ -51,7 +51,7 @@ layout: PostLayout
 主要包括三大部分【机器学习训练营-张敏】【深度学习训练营-胡晓林】【自然语言处理-刘知远】【算法训练营-邓俊辉】
 [课程链接](https://apppildsm5g5170.pc.xiaoe-tech.com/detail/p_60dc2bffe4b06d36718baac8/6?product_id=p_60dc2bffe4b06d36718baac8)
 
-#### 第一部分：机器学习训练营-张敏（争取10月学完，但没必要push）
+#### 第一部分：机器学习训练营-张敏（完成4/7）
 
 ![课程表](/static/images/machineLearning/zhangmin-machine-learning-lession.png)
 
@@ -60,3 +60,5 @@ layout: PostLayout
 考虑到基础知识基本已经掌握，或者可以从其他地方学习到，这里主要以实践为主，理论为辅。
 
 github上已经找到一个比较靠谱的7个[实践案例和代码](https://github.com/W-caner/ML_class)，逐步模仿实践，写使用手册，经验总结等，将知识和经验逐步沉淀下来。
+
+7个项目，一周一个，计划能做到4/7即可。学习时间安排的话，参考工作时间计划表即可。
