--- a/data/blog/goal/2022/monthly-goals-2022-10.mdx
+++ b/data/blog/goal/2022/monthly-goals-2022-10.mdx
@@ -1,7 +1,7 @@
 ---
 title: '2022-10月-目标'
 date: '2022-09-26'
-lastmod: '2022-09-26'
+lastmod: '2022-11-02'
 tags: ['2022', '10月份', '目标']
 draft: false
 summary: '找出你能做的事情，再从中挑出想做的事情，再从中挑选出真心想做的事情，最后从中挑选出真心特别特别特别想做的事情作为目标。'
@@ -9,37 +9,37 @@ authors: ['default']
 layout: PostLayout
 ---
 
-## 10月目标
+## 10 月目标
 
-10月有假期，休闲时间会稍多一些，可以做的事情自然也会多一些。
+10 月有假期，休闲时间会稍多一些，可以做的事情自然也会多一些。
 
 ### 游泳
 
-自由泳在2022年算是入门成功了，截下来应该解锁更多的新姿势。
+自由泳在 2022 年算是入门成功了，截下来应该解锁更多的新姿势。
 
-#### 仰泳（入门）
+#### 仰泳（入门）（基本动作掌握，局部细节还需要加强）
 
 仰泳比自由泳还要难一些，一个月内很难学会，但可以按照教程开始逐步练习，方可逐步掌握。
 
-#### 翻滚转身（熟练）
+#### 翻滚转身（熟练）（还没有入门）
 
 这个动作着实是有点帅，而且速度也会快一些，需要按照教程逐步练习，方可掌握。
 
-这个目标冲一冲，10月份达到，问题不大。
+这个目标冲一冲，10 月份达到，问题不大。
 
 ### 学英文
 
 无论是学技术，还是看电影，一个比较好的英文阅读水平，能够让事业走的更长远，生活也会更丰富有趣。
 
-#### 阅读英文小说（Marva Collins' Way ）（正常进展）
+#### 阅读英文小说（Marva Collins' Way ）（正常进展）（缓慢进行中）
 
-继续阅读，10月份可能也读不完，没关系，一边学习新单词，一遍看书，量变产生质变。
+继续阅读，10 月份可能也读不完，没关系，一边学习新单词，一遍看书，量变产生质变。
 
-### 积极心理学（正常进展）
+### 积极心理学（正常进展）（没有执行）
 
 之前学习的进度比较慢，一方面是没有指定学习计划，另一个方面是听课后不断应用实践，在没有充分实践完理论知识后，再去学习新的内容，效果可能会很差，所以没有去追进度。这个是非常正确的。
 
-### 机器学习项目
+### 机器学习项目（第一个项目仅做了一半）
 
 这个是专业技能方面了，不断钻研积累，才能让技术之路走的更宽更高效，对于技术的发展和应用也会更有信心。这块的确是要好好努力积累实践的。
 
@@ -51,14 +51,14 @@ layout: PostLayout
 主要包括三大部分【机器学习训练营-张敏】【深度学习训练营-胡晓林】【自然语言处理-刘知远】【算法训练营-邓俊辉】
 [课程链接](https://apppildsm5g5170.pc.xiaoe-tech.com/detail/p_60dc2bffe4b06d36718baac8/6?product_id=p_60dc2bffe4b06d36718baac8)
 
-#### 第一部分：机器学习训练营-张敏（完成4/7）
+#### 第一部分：机器学习训练营-张敏（完成 4/7）
 
-![课程表](/static/images/machineLearning/zhangmin-machine-learning-lession.png)
+[课程链接](https://www.xuetangx.com/training/ML080910036802/1048372?channel=i.area.recent_search)，考虑到基础知识基本已经掌握，或者可以从其他地方学习到，这里主要以实践为主，理论为辅。
 
-[课程链接](https://www.xuetangx.com/training/ML080910036802/1048372?channel=i.area.recent_search)
+github 上已经找到一个比较靠谱的 7 个[实践案例和代码](https://github.com/W-caner/ML_class)，逐步模仿实践，写使用手册，经验总结等，将知识和经验逐步沉淀下来。
 
-考虑到基础知识基本已经掌握，或者可以从其他地方学习到，这里主要以实践为主，理论为辅。
+7 个项目，一周一个，计划能做到 4/7 即可。学习时间安排的话，参考工作时间计划表即可。
 
-github上已经找到一个比较靠谱的7个[实践案例和代码](https://github.com/W-caner/ML_class)，逐步模仿实践，写使用手册，经验总结等，将知识和经验逐步沉淀下来。
+## 10 月结论
 
-7个项目，一周一个，计划能做到4/7即可。学习时间安排的话，参考工作时间计划表即可。
+以上计划内容都没有很好的执行，原因很简单，换工作的阶段中，难以集中精力，这个好解释，但却是个借口，下一个月让我们拭目以待吧。
