--- a/data/blog/goal/2022/monthly-goals-2022-11.mdx
+++ b/data/blog/goal/2022/monthly-goals-2022-11.mdx
@@ -12,3 +12,25 @@ layout: PostLayout
 ## 11 月目标
 
 11 月有休假，时间会有很多，想清楚了再写，写了就一定要做到，否则你干嘛写它呢。
+
+### 写日记（一定要坚持）
+
+每天起床之后或睡觉之前，花 10 分钟写日记，记录一下这一天发生的事情，总结梳理，便于了解后续的事情。
+
+### 晨练（跳绳）
+
+肾结石还需要再接再厉，喝完水之后跳，不仅能开启一个好的早晨，对体能也是一个挺大的帮助。
+
+### 风控模型
+
+整理一份详细的学习计划，开始学习。
+
+### 读完一本书
+
+《洞穴奇案》看完。
+
+### 仰泳
+
+踢腿已经比较熟练了，看来还是得勤于练习，才能有所提高。
+
+后续还是按照教程一步步的走吧，不要急于求成。
