--- a/data/blog/diary/2022/11/new-diary-2022-11-06.mdx
+++ b/data/blog/diary/2022/11/new-diary-2022-11-06.mdx
@@ -1,7 +1,7 @@
 ---
-title: '养成每天'
-date: '2022-11-02'
-lastmod: '2022-11-02'
+title: '养成每天写日记的习惯'
+date: '2022-11-06'
+lastmod: '2022-11-06'
 tags: ['养成写日记的好习惯']
 draft: true
 summary: '养成写日记的好习惯'
