梳理历史的心得感受，重新归档

--- a/data/blog/diary/2021/9/remember-of-something-2021-09-12.mdx
+++ b/data/blog/diary/2021/9/remember-of-something-2021-09-12.mdx
@@ -21,10 +21,10 @@ layout: PostLayout
 
 活着的时候努力生活，离开的时候也不麻烦别人，意识到生命就是这般简单，轻轻的来就如我轻轻的去，不留一丝痕迹。这样也挺好的。
 
-衡量生命的度量单位有很多种，秒，分，时，天，月，年，从最大的度量单位看，人活不过130年，但如果从时来看，我们一天可支配的时间有12个小时，我们有365 * 100 = 36500个小时，这么多的小时，我们应该去好好珍惜；
+衡量生命的度量单位有很多种，秒，分，时，天，月，年，从最大的度量单位看，人活不过 130 年，但如果从时来看，我们一天可支配的时间有 12 个小时，我们有 365 \* 100 = 36500 个小时，这么多的小时，我们应该去好好珍惜；
 有些事情需要花费一段时间去做，我们可以用天，月，综合衡量事件进展，每一点进步都是弥足珍贵的。
 
-能意识到时间的流逝，课除了工作和待学习任务，有哪些小时是值得，哪些可以变得更值得，如果能把握住时间的分配，就掌握了生命最大的执行力，就能迸发出最nb的能量。
+能意识到时间的流逝，课除了工作和待学习任务，有哪些小时是值得，哪些可以变得更值得，如果能把握住时间的分配，就掌握了生命最大的执行力，就能迸发出最 nb 的能量。
 
 经历完大姑父最后的这段时光，他对生命的理解是透彻的，简单明了，值得所有人做到对自己的严加要求，而不是严加要求别人。这就是受人尊敬和不受人尊敬的最大区别。
 
